<?xml version="1.0"?>
<package format="2">
  <name>mapbag_editor_msgs</name>
  <version>0.0.0</version>
  <description>The mapbag_editor_msgs package</description>

  <maintainer email="xhhh@todo.todo">xhhh</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>
