<?xml version="1.0"?>
<package format="2">
  <name>mapbag_editor_server</name>
  <version>0.0.0</version>
  <description>The mapbag_editor_server package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xiayuchen66@gmail.com">Yuchen Xia</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/mapbag_editor_server</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="xiayuchen66@gmail.com">Yuchen Xia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>hector_math</build_depend>
  <build_depend>hector_std_msgs</build_depend>
  <build_depend>hector_world_heightmap</build_depend>
  <build_depend>mapbag_editor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>hector_math</build_export_depend>
  <build_export_depend>hector_std_msgs</build_export_depend>
  <build_export_depend>hector_world_heightmap</build_export_depend>
  <build_export_depend>mapbag_editor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>hector_math</exec_depend>
  <exec_depend>hector_std_msgs</exec_depend>
  <exec_depend>hector_world_heightmap</exec_depend>
  <exec_depend>mapbag_editor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
